--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!-- Card 1 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card shadow">
-                <img src="https://placehold.co/300x200" class="card-img-top" alt="...">
+                <img src="images/CSS-Cheatsheet.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">CSS Cheatsheet</h5>
                     <p class="card-text"></p>
@@ -78,7 +78,7 @@
             <!-- Card 2 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card shadow">
-                <img src="https://placehold.co/300x200" class="card-img-top" alt="...">
+                <img src="images/Horiseon.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Horiseon</h5>
                     <p class="card-text"></p>
@@ -91,7 +91,7 @@
             <!-- Card 3 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card shadow">
-                <img src="https://placehold.co/300x200" class="card-img-top" alt="...">
+                <img src="images/Prework-studu-guide.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Prework Study Guide</h5>
                     <p class="card-text"></p>
@@ -160,7 +160,7 @@
                         <p class="lead">Hi, I'm Chris and I'm a Front End Web Developer Student based in the Isle of Wight. Before becoming a student,
                              I was a chef for 20 years until I decided to swap my knives for a keyboard and dive into code. So far I'm self taught, 
                              and have focused mostly working with bootstrap. I'm enthusiastic when it comes to learning something new
-                             and I love problem solving, and I don't give in (unles there's no more coffee!). So take a look at my work.
+                             and I love problem solving, and I don't give in (unless there's no more coffee!). So take a look at my work.
                         </p>
                     </div>
             </div>
