added styling and animation to cards in CSS file

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="row">
             <!-- Card 1 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-                <div class="card shadow">
+                <div class="card card-1 shadow">
                 <img src="images/CSS-Cheatsheet.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">CSS Cheatsheet</h5>
