added alt to card img, given navigation navbar-light property

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
 
     <!-- Navbar and Navigation -->
-    <nav class="navbar navbar-expand-lg bg-light" id="nav-main">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="nav-main">
         <a class="navbar-brand" href="#"><img src="images/Chris-Southon_avatar.png" alt="Chris Southon avatar"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -65,7 +65,7 @@
             <!-- Card 1 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card card-1 shadow">
-                <img src="images/CSS-Cheatsheet.png" class="card-img-top" alt="...">
+                <img src="images/CSS-Cheatsheet.png" class="card-img-top" alt="CSS Cheatsheet image">
                 <div class="card-body">
                     <h5 class="card-title">CSS Cheatsheet</h5>
                     <p class="card-text"></p>
@@ -78,7 +78,7 @@
             <!-- Card 2 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card shadow">
-                <img src="images/Horiseon.png" class="card-img-top" alt="...">
+                <img src="images/Horiseon.png" class="card-img-top" alt="Horiseon Webpage image">
                 <div class="card-body">
                     <h5 class="card-title">Horiseon</h5>
                     <p class="card-text"></p>
@@ -91,7 +91,7 @@
             <!-- Card 3 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card shadow">
-                <img src="images/Prework-studu-guide.png" class="card-img-top" alt="...">
+                <img src="images/Prework-studu-guide.png" class="card-img-top" alt="Prework Study Guide Webpage image">
                 <div class="card-body">
                     <h5 class="card-title">Prework Study Guide</h5>
                     <p class="card-text"></p>
