changed navbar-brand img

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Navbar and Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="nav-main">
-        <a class="navbar-brand" href="#"><img src="images/Chris-Southon_avatar.png" alt="Chris Southon avatar"></a>
+        <a class="navbar-brand" href="#"><img src="images/Laptop-Avatar.png" alt="Chris Southon Laptop avatar"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
