added padding and margins to my work, my skills and social icon sections.

--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
     </header>
 
     <!-- Work section -->
-    <section>
+    <section class="work-section-bg">
         <div class="container content">
             <h2 class="work-heading" id="my-work-heading">My work</h2>
-            <br>
             <div class="row">
             <!-- Card 1 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
@@ -146,13 +145,13 @@
         <!-- End cards -->
     </section>
 
-    <br>
+    <!-- <br> -->
 
     <!-- Skills and about me/contact me sections -->
-    <section>
+    <section class="skills-section-bg">
         <div class="container">
-            <div class="my-skills" id="my-skills-heading">
-                 <h2>My skills</h2>
+            <div class="my-skills" >
+                 <h2 id="my-skills-heading">My Skills</h2>
                     <div class="row">
                         <ul>
                             <li>A list of things I'm learning and have learnt.</li>
@@ -169,7 +168,7 @@
 
     <!-- Contact me icons -->
     
-    <section>
+    <section class="social-icons">
         <div class="social d-flex justify-content-center">
             <a class="mx-2" href="https://www.linkedin.com/in/chris-southon-320a25258/"><i class="fa-brands fa-linkedin"></i></a>
             <a class="mx-2" href="https://github.com/Chriscds"><i class="fab fa-github"></i></a>
@@ -179,7 +178,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; Chris Southon Portfolio 2022.</p>
+            <p>&copy; Chris Southon - Portfolio 2022.</p>
         </div>
     </footer>
     
