given social icons colors in CSS file

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
     
     <section class="social-icons">
         <div class="social d-flex justify-content-center">
-            <a class="mx-2" href="https://www.linkedin.com/in/chris-southon-320a25258/"><i class="fa-brands fa-linkedin"></i></a>
-            <a class="mx-2" href="https://github.com/Chriscds"><i class="fab fa-github"></i></a>
+            <a class="mx-2" href="https://www.linkedin.com/in/chris-southon-320a25258/"><i class="fa-brands fa-linkedin fa-4x"></i></a>
+            <a class="mx-2" href="https://github.com/Chriscds"><i class="fab fa-github fa-4x"></i></a>
         </div>
     </section>
 
