--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="row">
             <!-- Card 1 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-                <div class="card card-1 shadow">
+                <div class="card card-1 mb-3 shadow">
                 <img src="images/CSS-Cheatsheet.png" class="card-img-top" alt="CSS Cheatsheet image">
                 <div class="card-body">
                     <h5 class="card-title">CSS Cheatsheet</h5>
@@ -76,7 +76,7 @@
 
             <!-- Card 2 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-                <div class="card shadow">
+                <div class="card mb-3 shadow">
                 <img src="images/Horiseon.png" class="card-img-top" alt="Horiseon Webpage image">
                 <div class="card-body">
                     <h5 class="card-title">Horiseon</h5>
@@ -105,7 +105,7 @@
             <div class="row">
             <!-- Card 4 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-                <div class="card shadow">
+                <div class="card mb-3 shadow">
                 <img src="https://placehold.co/300x200" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Project Coming Soon</h5>
@@ -118,7 +118,7 @@
 
             <!-- Card 5 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-                <div class="card shadow">
+                <div class="card mb-3 shadow">
                 <img src="https://placehold.co/300x200" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Project Coming Soon</h5>
@@ -131,7 +131,7 @@
 
             <!-- Card 6 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-                <div class="card shadow">
+                <div class="card mb-3 shadow">
                 <img src="https://placehold.co/300x200" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Project Coming Soon</h5>
