added button color to cards in CSS file, and href's to buttons in HTML file

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="card-body">
                     <h5 class="card-title">CSS Cheatsheet</h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">Click me</a>
+                    <a href="https://chriscds.github.io/CSS-Cheatsheet/index.html" class="btn" id="button-color">Click me</a>
                 </div>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Horiseon</h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">Click me</a>
+                    <a href="https://chriscds.github.io/mod1-ass-horiseon/starter/" class="btn" id="button-color">Click me</a>
                 </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Prework Study Guide</h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">Click me</a>
+                    <a href="https://chriscds.github.io/prework-study-guide/" class="btn" id="button-color">Click me</a>
                 </div>
                 </div>
             </div>
@@ -110,7 +110,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Project Coming Soon</h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">Click me</a>
+                    <a href="#" class="btn" id="button-color">Click me</a>
                 </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Project Coming Soon</h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">Click me</a>
+                    <a href="#" class="btn" id="button-color">Click me</a>
                 </div>
                 </div>
             </div>
@@ -136,7 +136,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Project Coming Soon</h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">Click me</a>
+                    <a href="#" class="btn" id="button-color">Click me</a>
                 </div>
                 </div>
             </div>
