added description to cards in HTML file

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <img src="images/CSS-Cheatsheet.png" class="card-img-top" alt="CSS Cheatsheet image">
                 <div class="card-body">
                     <h5 class="card-title">CSS Cheatsheet</h5>
-                    <p class="card-text"></p>
+                    <p class="card-text">Shows how CSS Flexbox, rows, columns and grid layouts work.</p>
                     <a href="https://chriscds.github.io/CSS-Cheatsheet/index.html" class="btn" id="button-color">Click me</a>
                 </div>
                 </div>
@@ -80,7 +80,7 @@
                 <img src="images/Horiseon.png" class="card-img-top" alt="Horiseon Webpage image">
                 <div class="card-body">
                     <h5 class="card-title">Horiseon</h5>
-                    <p class="card-text"></p>
+                    <p class="card-text">Refactor Assignment for Bootcamp, using HTML and CSS</p>
                     <a href="https://chriscds.github.io/mod1-ass-horiseon/starter/" class="btn" id="button-color">Click me</a>
                 </div>
                 </div>
@@ -92,8 +92,8 @@
                 <div class="card shadow">
                 <img src="images/Prework-studu-guide.png" class="card-img-top" alt="Prework Study Guide Webpage image">
                 <div class="card-body">
-                    <h5 class="card-title">Prework Study Guide</h5>
-                    <p class="card-text"></p>
+                    <h5 class="card-title">Study Guide</h5>
+                    <p class="card-text">For Pre Study Work, contains info on HTML, CSS, Git & JavaScript.</p>
                     <a href="https://chriscds.github.io/prework-study-guide/" class="btn" id="button-color">Click me</a>
                 </div>
                 </div>
