Changed myHeroHeader in HTML file

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <header>
         <div class="jumbotron myHeroHeader">
             <div class="row">
-                <div class="col-lg-2 col-lg-8 col-lg-2">
+                <div class="col-lg-12">
                     <img src="images/Chris-Southon_avatar.png" alt="Chris Southon avatar" class="img-responsive myImage">
                     <h1 class="display-4 myHeading">Chris Southon</h1>
-                <p class="lead">"Welcome to my portfolio!"</p>
+                <p class="lead">"<em>Front-end Developer Student</em>"</p>
                 </div>
             </div>
           </div>
