--- a/index.html
+++ b/index.html
@@ -145,23 +145,23 @@
         <!-- End cards -->
     </section>
 
-    <!-- <br> -->
 
     <!-- Skills and about me/contact me sections -->
     <section class="skills-section-bg">
-        <div class="container">
-            <div class="my-skills" >
-                 <h2 id="my-skills-heading">My Skills</h2>
-                    <div class="row">
-                        <ul>
-                            <li>A list of things I'm learning and have learnt.</li>
-                        </ul>
-                        <p class="lead">Hi, I'm Chris and I'm a Front End Web Developer Student based in the Isle of Wight. Before becoming a student,
-                             I was a chef for 20 years until I decided to swap my knives for a keyboard and dive into code. So far I'm self taught, 
-                             and have focused mostly working with bootstrap. I'm enthusiastic when it comes to learning something new
-                             and I love problem solving, and I don't give in (unless there's no more coffee!). So take a look at my work.
-                        </p>
-                    </div>
+        <div class="container content">
+            <div class="row p-3">
+                <div class="my-skills">
+                 <h2 id="my-skills-heading">About Me</h2>
+                    <p class="lead">Hi, I'm Chris and I'm a Front End Web Developer Student based in the Isle of Wight. Before becoming a student,
+                    I was a chef for 20 years until I decided to swap my knives for a keyboard and dive into code. So far I'm self taught, 
+                    and have focused mostly working with bootstrap. I'm enthusiastic when it comes to learning something new
+                    and I love problem solving, and I don't give in (unless there's no more coffee!). So take a look at my work.
+                    </p>
+                <h2 id="my-skills-heading">My Skills</h2>
+                    <ul>
+                        <li>A list of things I'm learning and have learnt.</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
