Added margins to about and skills headings in CSS file

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                 <a class="nav-link" href="#my-work-heading">Work</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link"  href="#my-about-heading">About</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link"  href="#my-skills-heading">Skills</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link"  href="#">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link"  href="#">Contact</a>
+                <a class="nav-link"  href="#contact-me">Contact</a>
             </li>
         </ul>
     </div>
@@ -151,7 +151,7 @@
         <div class="container content">
             <div class="row p-3">
                 <div class="my-skills">
-                 <h2 id="my-skills-heading">About Me</h2>
+                 <h2 id="my-about-heading">About Me</h2>
                     <p class="lead">Hi, I'm Chris and I'm a Front End Web Developer Student based in the Isle of Wight. Before becoming a student,
                     I was a chef for 20 years until I decided to swap my knives for a keyboard and dive into code. So far I'm self taught, 
                     and have focused mostly working with bootstrap. I'm enthusiastic when it comes to learning something new
@@ -168,7 +168,7 @@
 
     <!-- Contact me icons -->
     
-    <section class="social-icons">
+    <section class="social-icons" id="contact-me">
         <div class="social d-flex justify-content-center">
             <a class="mx-2" href="https://www.linkedin.com/in/chris-southon-320a25258/"><i class="fa-brands fa-linkedin fa-4x"></i></a>
             <a class="mx-2" href="https://github.com/Chriscds"><i class="fab fa-github fa-4x"></i></a>
