added text to skills section in HTML file

--- a/index.html
+++ b/index.html
@@ -152,14 +152,21 @@
             <div class="row p-3">
                 <div class="my-skills">
                  <h2 id="my-about-heading">About Me</h2>
-                    <p class="lead">Hi, I'm Chris and I'm a Front End Web Developer Student based in the Isle of Wight. Before becoming a student,
-                    I was a chef for 20 years until I decided to swap my knives for a keyboard and dive into code. So far I'm self taught, 
-                    and have focused mostly working with bootstrap. I'm enthusiastic when it comes to learning something new
-                    and I love problem solving, and I don't give in (unless there's no more coffee!). So take a look at my work.
+                    <p class="lead">Hi, I'm Chris and I'm a Front End Web Developer Student based in the Isle of Wight, UK. Before becoming a student,
+                    I was a chef for 20 years until I decided to swap my knives for a keyboard and dive into code. Up to now, I'm self taught, 
+                    and have focused mostly working with bootstrap, until I became a Front-end Development student. I'm enthusiastic when it comes to learning something new
+                    and I love a challenge and problem solving, I don't give up (unless there's no more coffee!).
                     </p>
                 <h2 id="my-skills-heading">My Skills</h2>
                     <ul>
-                        <li>A list of things I'm learning and have learnt.</li>
+                        <p><em>Skills I've learnt so far...</em></p>
+                        <li>HTML, CSS, and Bootstrap.</li>
+                        <li>Git and GitHub.</li>
+                        <li>UX design principles.</li>
+                        <br>
+                        <p><em>Skills I will learn by the end of my course...</em></p>
+                        <li>Javascript, React, JQuery.</li>
+                        <li>Build modern web applications, using frameworks like Node.js and React.</li>
                     </ul>
                 </div>
             </div>
