added contact button in HTML file and styling in CSS file

--- a/index.html
+++ b/index.html
@@ -174,9 +174,18 @@
     </section>
 
     <!-- Contact me icons -->
-    
     <section class="social-icons" id="contact-me">
-        <div class="social d-flex justify-content-center">
+        <div class="container social">
+            <h2>Contact Me</h2>
+        </div>
+            <div class="row justify-content-center">
+                <div class="contact-button col-md-4 col-lg-4">
+                    <form action="mailto:chris.edxbootcamp@gmail.com" method="post" enctype="text/plain">
+                        <button type="submit" value="send" class="contact-me-button btn btn-outline-secondary">Email Me here</button>
+                    </form>
+                </div>
+            </div>
+        <div class="d-flex justify-content-center">
             <a class="mx-2" href="https://www.linkedin.com/in/chris-southon-320a25258/"><i class="fa-brands fa-linkedin fa-4x"></i></a>
             <a class="mx-2" href="https://github.com/Chriscds"><i class="fab fa-github fa-4x"></i></a>
         </div>
