--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <div class="jumbotron myHeroHeader">
             <div class="row">
                 <div class="col-lg-12">
-                    <img src="images/Chris-Southon_avatar.png" alt="Chris Southon avatar" class="img-responsive myImage">
+                    <!-- <img src="images/Chris-Southon_avatar.png" alt="Chris Southon avatar" class="img-responsive myImage"> -->
+                    <img src="images/chris-southon-profile-photo.png" alt="Chris Southon avatar" class="img-responsive myImage shadow-lg">
                     <h1 class="display-4 myHeading">Chris Southon</h1>
                 <p class="lead">"<em>Front-end Developer Student</em>"</p>
                 </div>
