--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
     </section>
 
-    <!-- Contact me icons -->
+    <!-- Contact me details and social icons -->
     <section class="social-icons" id="contact-me">
         <div class="container social">
             <h2>Contact Me</h2>
@@ -184,9 +184,8 @@
             <br>
             <div class="row justify-content-center">
                 <div class="resume-div-button col-md-4 col-lg-4">
-                    
-                        <button type="submit" value="send" class="resume-button btn btn-outline-secondary">Resume</button>
-                    
+                        <!-- <button role="button" class="resume-button btn btn-outline-secondary">Resume</button> -->
+                        <a role="button" href="https://bit.ly/chrissouthon-resume" target="_blank" class="resume-button btn btn-outline-secondary">Resume</a>
                 </div>
             </div>
         <div class="d-flex justify-content-center">
