Added new resume link.

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <div class="row justify-content-center">
                 <div class="resume-div-button col-md-4 col-lg-4">
                         <!-- <button role="button" class="resume-button btn btn-outline-secondary">Resume</button> -->
-                        <a role="button" href="https://bit.ly/chrissouthon-resume" target="_blank" class="resume-button btn btn-outline-secondary">Resume</a>
+                        <a role="button" href="https://bit.ly/csouthon-resume" target="_blank" class="resume-button btn btn-outline-secondary">Resume</a>
                 </div>
             </div>
         <div class="d-flex justify-content-center">
