Updated cards with repo links , Updated projects.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
         <div class="jumbotron myHeroHeader">
             <div class="row">
                 <div class="col-lg-12">
-                    <!-- <img src="images/Chris-Southon_avatar.png" alt="Chris Southon avatar" class="img-responsive myImage"> -->
                     <img src="images/chris-southon-profile-photo.png" alt="Chris Southon avatar" class="img-responsive myImage shadow-lg">
                     <h1 class="display-4 myHeading">Chris Southon</h1>
                 <p class="lead">Front-end Developer</p>
@@ -66,11 +65,14 @@
             <!-- Card 1 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card card-1 mb-3 shadow">
-                <img src="images/CSS-Cheatsheet.png" class="card-img-top" alt="CSS Cheatsheet image">
+                <img src="assets/site-images/CSS-Cheatsheet.png" class="card-img-top" alt="CSS Cheatsheet image">
                 <div class="card-body">
                     <h5 class="card-title">CSS Cheatsheet</h5>
                     <p class="card-text">Shows how CSS Flexbox, rows, columns and grid layouts work.</p>
-                    <a href="https://chriscds.github.io/CSS-Cheatsheet/index.html" class="btn" id="button-color">Click me</a>
+                    <div class="card-button justify-content-center">
+                        <a href="https://chriscds.github.io/CSS-Cheatsheet/index.html" class="btn m-2" id="button-color">Live Site</a>
+                        <a href="https://github.com/Chriscds/CSS-Cheatsheet" class="btn m-2" id="button-color">Git Repo</a>
+                    </div>
                 </div>
                 </div>
             </div>
@@ -78,11 +80,14 @@
             <!-- Card 2 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card mb-3 shadow">
-                <img src="images/Horiseon.png" class="card-img-top" alt="Horiseon Webpage image">
+                <img src="assets/site-images/Horiseon.png" class="card-img-top" alt="Horiseon Webpage image">
                 <div class="card-body">
                     <h5 class="card-title">Horiseon</h5>
                     <p class="card-text">Refactor Assignment for Bootcamp, using HTML and CSS</p>
-                    <a href="https://chriscds.github.io/mod1-ass-horiseon/starter/" class="btn" id="button-color">Click me</a>
+                    <div class="card-button justify-content-center">
+                        <a href="https://chriscds.github.io/mod1-ass-horiseon/starter/" class="btn m-2" id="button-color">Live Site</a>
+                        <a href="https://github.com/Chriscds/mod1-ass-horiseon" class="btn m-2" id="button-color">Git Repo</a>
+                    </div>
                 </div>
                 </div>
             </div>
@@ -90,11 +95,14 @@
             <!-- Card 3 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card shadow">
-                <img src="images/Prework-studu-guide.png" class="card-img-top" alt="Prework Study Guide Webpage image">
+                <img src="assets/site-images/Prework-studu-guide.png" class="card-img-top" alt="Prework Study Guide Webpage image">
                 <div class="card-body">
                     <h5 class="card-title">Study Guide</h5>
                     <p class="card-text">For Pre Study Work, contains info on HTML, CSS, Git & JavaScript.</p>
-                    <a href="https://chriscds.github.io/prework-study-guide/" class="btn" id="button-color">Click me</a>
+                    <div class="card-button justify-content-center">
+                        <a href="https://chriscds.github.io/prework-study-guide/" class="btn m-2" id="button-color">Live Site</a>
+                        <a href="https://github.com/Chriscds/prework-study-guide" class="btn m-2" id="button-color">Git Repo</a>
+                    </div>
                 </div>
                 </div>
             </div>
@@ -107,11 +115,14 @@
             <!-- Card 4 -->
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card mb-3 shadow">
-                <img src="https://placehold.co/300x200" class="card-img-top" alt="...">
+                <img src="assets/site-images/password-generator.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Project Coming Soon</h5>
+                    <h5 class="card-title">Password Generator</h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn" id="button-color">Click me</a>
+                    <div class="card-button justify-content-center">
+                        <a href="https://chriscds.github.io/Password-Generator/index.html" class="btn m-2" id="button-color">Live Site</a>
+                        <a href="https://github.com/Chriscds/Password-Generator" class="btn m-2" id="button-color">Git Repo</a>
+                    </div>
                 </div>
                 </div>
             </div>
@@ -123,7 +134,10 @@
                 <div class="card-body">
                     <h5 class="card-title">Project Coming Soon</h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn" id="button-color">Click me</a>
+                    <div class="card-button justify-content-center">
+                        <a href="#" class="btn m-2" id="button-color">Live Site</a>
+                        <a href="#" class="btn m-2" id="button-color">Git Repo</a>
+                    </div>
                 </div>
                 </div>
             </div>
@@ -135,7 +149,10 @@
                 <div class="card-body">
                     <h5 class="card-title">Project Coming Soon</h5>
                     <p class="card-text"></p>
-                    <a href="#" class="btn" id="button-color">Click me</a>
+                    <div class="card-button justify-content-center">
+                        <a href="#" class="btn m-2" id="button-color">Live Site</a>
+                        <a href="#" class="btn m-2" id="button-color">Git Repo</a>
+                    </div>
                 </div>
                 </div>
             </div>
