--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+
     <title>Chris Southon Portfolio</title>
   </head>
   <body>
@@ -218,6 +219,7 @@
         </div>
     </footer>
     
+    <script src="js/script.js"></script>
     
     <!-- font awesone -->
     <script src="https://kit.fontawesome.com/1a589a5fd6.js" crossorigin="anonymous"></script>
