Added icons in skills section in index.html.

--- a/index.html
+++ b/index.html
@@ -176,13 +176,15 @@
                 <h2 id="my-skills-heading">My Skills</h2>
                     <ul>
                         <p><em>Skills I've learnt so far...</em></p>
-                        <li>HTML, CSS, and Bootstrap.</li>
-                        <li>Git and GitHub.</li>
+                        <li><i class="fa-brands fa-html5 fa-3x"></i> <i class="fa-brands fa-css3-alt fa-3x"></i> <i class="fa-brands fa-square-js fa-3x"></i> HTML, CSS, JavaScript, JQuery</li>
+                        <li><i class="fa-brands fa-git-alt fa-3x"></i> <i class="fa-brands fa-github fa-3x"></i> Git, GitHub</li>
+                        <br>
                         <li>UX design principles.</li>
                         <br>
                         <p><em>Skills I will learn by the end of my course...</em></p>
-                        <li>Javascript, React, JQuery.</li>
-                        <li>Build modern web applications, using frameworks like Node.js and React.</li>
+                        <li><i class="fa-brands fa-react fa-3x"></i> React.</li>
+                        <br>
+                        <li><i class="fa-brands fa-node-js fa-3x"></i> <i class="fa-brands fa-react fa-3x"></i> Build modern web applications, using frameworks like Node.js and React.</li>
                     </ul>
                 </div>
             </div>
@@ -208,7 +210,7 @@
             </div>
         <div class="d-flex justify-content-center">
             <a class="mx-2" href="https://www.linkedin.com/in/chris-southon-320a25258/"><i class="fa-brands fa-linkedin fa-4x"></i></a>
-            <a class="mx-2" href="https://github.com/Chriscds"><i class="fab fa-github fa-4x"></i></a>
+            <a class="mx-2" href="https://github.com/Chriscds"><i class="fab fa-github fa-4x github"></i></a>
         </div>
     </section>
 
