Added info to work card.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <img src="assets/site-images/password-generator.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Password Generator</h5>
-                    <p class="card-text"></p>
+                    <p class="card-text">Generates a random password based on users inputs.</p>
                     <div class="card-button justify-content-center">
                         <a href="https://chriscds.github.io/Password-Generator/index.html" class="btn m-2" id="button-color">Live Site</a>
                         <a href="https://github.com/Chriscds/Password-Generator" class="btn m-2" id="button-color">Git Repo</a>
