--- a/index.html
+++ b/index.html
@@ -144,19 +144,20 @@
             </div>
             
             <!-- Card 6 -->
-            <!-- <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+            <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card mb-3 shadow">
-                <img src="https://placehold.co/300x200" class="card-img-top" alt="...">
+                <img src="assets/site-images/team-profile.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Project Coming Soon</h5>
-                    <p class="card-text"></p>
+                    <h5 class="card-title">Team Profile Generator</h5>
+                    <p class="card-text">Generates a html file from user input using Node.js</p>
                     <div class="card-button justify-content-center">
-                        <a href="#" class="btn m-2" id="button-color">Live Site</a>
-                        <a href="#" class="btn m-2" id="button-color">Git Repo</a>
+                        <a href="https://drive.google.com/file/d/11YReBi5jf6As_MxEWijV8UBV0V3YqOL-/view?usp=sharing" class="btn m-2" id="button-color">Live Demo</a>
+                        <a href="https://github.com/Chriscds/Team-Profile-Generator" class="btn m-2" id="button-color">Git Repo</a>
                     </div>
                 </div>
                 </div>
-            </div> -->
+            </div>
+            
 
             </div>
         </div>
